[package]
name = "lib"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0.89", features = ["derive", "rc"] }
serde_json = "1.0.41"
rand = "0.7.2"
rand_distr = "0.2.2"
arrayvec = { version = "0.4.11", features = ["serde-1"] }

[dependencies.math_lib]
git = "https://github.com/pypypypypypypypypyp/math_lib"

[dependencies.array_tuple]
git = "https://github.com/pypypypypypypypypyp/array_tuple"

[dependencies.terminal]
git = "https://github.com/pypypypypypypypypyp/terminal"

[dependencies.limiter]
git = "https://github.com/pypypypypypypypypyp/limiter"
